# synth-kgqa

./: .gitignore  LICENSE  NOTICE.md  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/PoG/: requirements.txt  run.sh
benchmarks/PoG/PoG/: freebase_func.py  graph.py  main_freebase.py  prompt_list.py  utils.py
benchmarks/PoG/eval/: eval.py  utils.py
benchmarks/ToG/: requirements.txt  run.sh
benchmarks/ToG/ToG/: client.py  freebase_func.py  graph.py  main_freebase.py  main_wiki.py  prompt_list.py  utils.py  wiki_func.py
benchmarks/graph-constrained-reasoning/: run.sh
benchmarks/graph-constrained-reasoning/accelerate_configs/: deepspeed_zero3.yaml
benchmarks/graph-constrained-reasoning/scripts/: build_graph_index.sh  graph_constrained_decoding.sh  graph_constrained_decoding_sp.sh  graph_inductive_reasoning.sh  graph_inductive_reasoning_sp.sh  train_kg_specialized_llm.sh  train_kg_specialized_llm_sp.sh
benchmarks/graph-constrained-reasoning/src/: graph_constrained_decoding.py  qa_prompt_builder.py  trie.py
benchmarks/graph-constrained-reasoning/src/llms/: __init__.py  base_hf_causal_model.py  base_language_model.py  chatgpt.py  conv_prompt.py  graph_constrained_decoding_model.py  (+3 more)
benchmarks/graph-constrained-reasoning/workflow/: build_graph_index.py  build_shortest_path_index.py  finetune_kg_specialized_llm.py  predict_final_answer.py  predict_paths_and_answers.py
benchmarks/llm_graph_walk/: README.md  pyproject.toml
benchmarks/llm_graph_walk/eval/: eval_subgraphrag.py  utils.py
benchmarks/llm_graph_walk/llm_graph_walk/: __init__.py  client_light.py  graph.py  llm.py  prompts.py  sample_subgraphrag.py  text_encoder.py
benchmarks/llm_graph_walk/train/: train_subgraphrag.py
benchmarks/reasoning-on-graphs/: README.md  requirements.txt  run.sh
benchmarks/reasoning-on-graphs/config/: deepspeed_zero3.yml
benchmarks/reasoning-on-graphs/scripts/: interpretable_example.py  planning.sh  planning_sp.sh  plug-and-play.sh  plug-and-play_sp.sh  rog-reasoning.sh  train.sh  train_sp.sh
notebooks/: gtsqa.ipynb  paper_analysis.ipynb  plot_utils.py  preprocess_wikikg2.ipynb
synth_kgqa/: __init__.py  compute_neighs_and_sp.py  eval.py  generate.py  graph_sampling.py  kg_utils.py  llm.py  parse.py  process_qa.py  process_utils.py  prompts.py
(+32 files in other folders)
